--- a/src/index.html
+++ b/src/index.html
@@ -48,12 +48,12 @@
         <input type="checkbox" id="my-modal-5" class="modal-toggle" />
         <!--arranca modal-->
         <div class="modal">
-          <div class="modal-box w-11/12 sm:w-8/12 h-full max-w-5xl bg-white text-black flex flex-col">
-            <h2 class="text-green-400 text-center text-3xl pt-4 font-semibold">Bornoz Bank</h2>
+          <div class="modal-box w-11/12 sm:w-8/12 h-fit max-w-5xl bg-white text-black flex flex-col">
+            <h2 class="text-green-400 text-center text-3xl pt-3 font-semibold">Bornoz Bank</h2>
             <h2 class="text-gray-400 text-center text-2xl pt-4">Registrese aquí debajo gratis</h2>
             <div class="form flex flex-col items-center">
               <!--arranca register usuario-->
-              <div class="form-control w-full max-w-xs mx-auto pt-4 px-4">
+              <div class="form-control w-full max-w-xs mx-auto pt-4">
                 <label class="label">
                   <span class="label-text">Nombre de usuario</span>
                 </label>
@@ -61,7 +61,7 @@
                   class="input input-bordered w-full max-w-xs bg-white" />
               </div>
               <!--termina register usuario-->
-              <div class="form-control w-full max-w-xs mx-auto px-4">
+              <div class="form-control w-full max-w-xs mx-auto">
                 <label class="label">
                   <span class="label-text">Correo electrónico</span>
                 </label>
@@ -69,7 +69,7 @@
                   class="input input-bordered w-full max-w-xs bg-white" />
               </div>
               <!--arranca register password-->
-              <div class="form-control w-full max-w-xs mx-auto px-4">
+              <div class="form-control w-full max-w-xs mx-auto">
                 <label class="label">
                   <span class="label-text">Contraseña</span>
                 </label>
@@ -83,7 +83,7 @@
                 class="btn btn-sm btn-circle absolute right-4 top-4 border-solid bg-transparent border-red-600 text-red-600 hover:bg-red-600 hover:text-white hover:border-none">X</label>
             </div>
             <button type="submit"
-              class="btn justify-center mx-40 mt-2 btn-outline text-green-400 hover:text-white hover:border-green-400 border-green-400 hover:bg-green-400">Registrarse</button>
+              class="btn justify-center sm:mx-20 md:mx-40 mt-2 btn-outline text-green-400 hover:text-white hover:border-green-400 border-green-400 hover:bg-green-400 mb-3">Registrarse</button>
           </div>
           <!--termina modal box-->
         </div>
