--- a/src/index.html
+++ b/src/index.html
@@ -26,18 +26,17 @@
           </label>
           <ul tabindex="0"
             class="menu menu-compact dropdown-content mt-3 p-2 shadow-lg text-black bg-white rounded-box w-52 ">
-            <li><a rel="noopener noreferrer" class="hover:bg-cyan-900 active:bg-cyan-900 hover:text-white">Home</a></li>
+            <li><a href="../dist/dashboard.html" rel="noopener noreferrer" class="hover:bg-cyan-900 active:bg-cyan-900 hover:text-white">Home</a></li>
             <li><a rel="noopener noreferrer" class="hover:bg-cyan-900 active:bg-cyan-900 hover:text-white">Contactos</a>
             </li>
-            <li><a rel="noopener noreferrer"
-                class="hover:bg-cyan-900 active:bg-cyan-900 hover:text-white">Transferencias</a></li>
+            <li><a rel="noopener noreferrer" class="hover:bg-cyan-900 active:bg-cyan-900 hover:text-white">Transferencias</a></li>
           </ul>
         </div>
         <a class="btn btn-ghost normal-case text-xl hidden sm:flex ">Bornoz Bank</a>
       </div>
       <div class="navbar-center hidden lg:flex justify-center align-middle">
         <ul class="menu menu-horizontal p-0 font-light text-black bg-white rounded-box shadow-lg">
-          <li><a rel="noopener noreferrer" class="active:bg-cyan-900">Home</a></li>
+          <li><a href="../dist/dashboard.html" rel="noopener noreferrer" class="active:bg-cyan-900">Home</a></li>
           <li><a rel="noopener noreferrer" class="active:bg-cyan-900">Contactos</a></li>
           <li><a rel="noopener noreferrer" class="active:bg-cyan-900">Transferencias</a></li>
         </ul>
