--- a/src/dashboard.html
+++ b/src/dashboard.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="./output.css" rel="stylesheet">
+  <link href="../dist/output.css" rel="stylesheet">
   <title>Bornoz Bank</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -89,9 +89,9 @@
         <!--termina balance dolares-->
         <!--terminan balances-->
         <!--arranca movimientos-->
-        <div class="overflow-x-auto w-full col-span-4 text-black">
-          <h2 class="text-2xl">Movimientos</h2>            
-          <table class="table-normal w-full">
+        <div class="overflow-x-auto w-full col-span-4 text-black ">
+          <h2 class="text-2xl mb-4">Movimientos</h2>            
+          <table class="table-compact sm:table-normal w-full">
             <!-- head -->
             <tbody>
               <!-- row 1 -->
@@ -109,7 +109,7 @@
                     </div>
                   </div>
                 </td>
-                <td class="text-green-400">+$1.500</td>
+                <td><span class="text-white bg-green-500 rounded-box px-2 py-0.5 font-semibold">+$1.500</span></td>
                 <th>
                   <button class="btn btn-ghost btn-xs">Detalles</button>
                 </th>
@@ -129,7 +129,7 @@
                     </div>
                   </div>
                 </td>
-                <td class="text-green-400">+$850</td>
+                <td><span class="text-white bg-green-500 rounded-box px-2 py-0.5 font-semibold">+$850</span></td>
                 <th>
                   <button class="btn btn-ghost btn-xs">Detalles</button>
                 </th>
@@ -149,7 +149,7 @@
                     </div>
                   </div>
                 </td>
-                <td class="text-red-400">-$3.750</td>
+                <td><span class="text-white bg-red-600 rounded-box px-2 py-0.5 font-semibold">-$3.750</span></td>
                 <th>
                   <button class="btn btn-ghost btn-xs">Detalles</button>
                 </th>
@@ -169,7 +169,7 @@
                     </div>
                   </div>
                 </td>
-                <td class="text-red-400">-$6.300</td>
+                <td><span class="text-white bg-red-600 rounded-box px-2 py-0.5 font-semibold">-$6.300</span></td>
                 <th>
                   <button class="btn btn-ghost btn-xs">Detalles</button>
                 </th>
