add js, rooteo js

--- a/src/dashboard.html
+++ b/src/dashboard.html
@@ -6,11 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="../dist/output.css" rel="stylesheet">
   <title>Bornoz Bank</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;0,400;0,700;0,800;1,500&display=swap"
-    rel="stylesheet">
   <script src="https://kit.fontawesome.com/2a09230c59.js" crossorigin="anonymous"></script>
+  <script defer src="./js/app.js"></script>
 </head>
 
 <body class="bg-gradient-to-b from-green-400 to-cyan-900 ">
@@ -100,11 +97,11 @@
                   <div class="flex items-center space-x-3">
                     <div class="avatar placeholder mr-2">
                       <div class="bg-neutral-focus text-neutral-content rounded-full w-12">
-                        <span>MP</span>
+                        <span>JC</span>
                       </div>
                     </div>
                     <div>
-                      <div class="font-bold">Maximo Perez</div>
+                      <div class="font-bold">Joaquin Carbajal</div>
                       <div class="text-sm opacity-50">Hoy</div>
                     </div>
                   </div>
