--- a/src/index.html
+++ b/src/index.html
@@ -6,11 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="../dist/output.css" rel="stylesheet">
   <title>Bornoz Bank</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;0,400;0,700;0,800;1,500&display=swap"
-    rel="stylesheet">
   <script src="https://kit.fontawesome.com/2a09230c59.js" crossorigin="anonymous"></script>
+  <script defer src="./js/app.js"></script>
 </head>
 
 <body class="bg-gradient-to-b from-green-400 to-cyan-900 ">
