--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="../dist/output.css" rel="stylesheet">
+  <link href="./dist/output.css" rel="stylesheet">
   <title>Bornoz Bank</title>
   <script src="https://kit.fontawesome.com/2a09230c59.js" crossorigin="anonymous"></script>
-  <script defer src="./js/app.js"></script>
+  <script defer src="./src/js/app.js"></script>
 </head>
 
 <body class="bg-gradient-to-b from-green-400 to-cyan-900 ">
@@ -23,7 +23,7 @@
           </label>
           <ul tabindex="0"
             class="menu menu-compact dropdown-content mt-3 p-2 shadow-lg text-black bg-white rounded-box w-52 ">
-            <li><a href="./dashboard.html" rel="noopener noreferrer" class="hover:bg-cyan-900 active:bg-cyan-900 hover:text-white">Home</a></li>
+            <li><a href="./src/dashboard.html" rel="noopener noreferrer" class="hover:bg-cyan-900 active:bg-cyan-900 hover:text-white">Home</a></li>
             <li><a rel="noopener noreferrer" class="hover:bg-cyan-900 active:bg-cyan-900 hover:text-white">Contactos</a>
             </li>
             <li><a rel="noopener noreferrer" class="hover:bg-cyan-900 active:bg-cyan-900 hover:text-white">Transferencias</a></li>
@@ -33,7 +33,7 @@
       </div>
       <div class="navbar-center hidden lg:flex justify-center align-middle">
         <ul class="menu menu-horizontal p-0 font-light text-black bg-white rounded-box shadow-lg">
-          <li><a href="./dashboard.html" rel="noopener noreferrer" class="active:bg-cyan-900">Home</a></li>
+          <li><a href="./src/dashboard.html" rel="noopener noreferrer" class="active:bg-cyan-900">Home</a></li>
           <li><a rel="noopener noreferrer" class="active:bg-cyan-900">Contactos</a></li>
           <li><a rel="noopener noreferrer" class="active:bg-cyan-900">Transferencias</a></li>
         </ul>
