--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,14 @@
 <!doctype html>
-<html>
+<html lang="en">
 
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="./dist/output.css" rel="stylesheet">
+  <link href="../dist/output.css" rel="stylesheet">
   <title>Bornoz Bank</title>
   <script src="https://kit.fontawesome.com/2a09230c59.js" crossorigin="anonymous"></script>
   <script defer src="./src/js/app.js"></script>
+  <link rel="shortcut icon" href="./assets/logo.png" type="image/x-icon">
 </head>
 
 <body class="bg-gradient-to-b from-green-400 to-cyan-900 ">
