arreglo form register modal

--- a/src/index.html
+++ b/src/index.html
@@ -24,10 +24,12 @@
           </label>
           <ul tabindex="0"
             class="menu menu-compact dropdown-content mt-3 p-2 shadow-lg text-black bg-white rounded-box w-52 ">
-            <li><a href="./src/dashboard.html" rel="noopener noreferrer" class="hover:bg-cyan-900 active:bg-cyan-900 hover:text-white">Home</a></li>
+            <li><a href="./src/dashboard.html" rel="noopener noreferrer"
+                class="hover:bg-cyan-900 active:bg-cyan-900 hover:text-white">Home</a></li>
             <li><a rel="noopener noreferrer" class="hover:bg-cyan-900 active:bg-cyan-900 hover:text-white">Contactos</a>
             </li>
-            <li><a rel="noopener noreferrer" class="hover:bg-cyan-900 active:bg-cyan-900 hover:text-white">Transferencias</a></li>
+            <li><a rel="noopener noreferrer"
+                class="hover:bg-cyan-900 active:bg-cyan-900 hover:text-white">Transferencias</a></li>
           </ul>
         </div>
         <a class="btn btn-ghost normal-case text-xl hidden sm:flex ">Bornoz Bank</a>
@@ -51,38 +53,38 @@
             <h2 class="text-green-400 text-center text-3xl pt-3 font-semibold">Bornoz Bank</h2>
             <h2 class="text-gray-400 text-center text-2xl pt-4">Registrese aquí debajo gratis</h2>
             <div class="form flex flex-col items-center">
-              <!--arranca register usuario-->
+              <!--arranca register-->
               <div class="form-control w-full max-w-xs mx-auto pt-4">
+                <!--arranca register usuario-->
                 <label class="label">
                   <span class="label-text">Nombre de usuario</span>
-                </label>
+                </label>                
                 <input required type="text" placeholder="Escriba aquí su nombre de usuario"
                   class="input input-bordered w-full max-w-xs bg-white" />
-              </div>
-              <!--termina register usuario-->
-              <div class="form-control w-full max-w-xs mx-auto">
+                <!--termina register usuario-->
+                <!--arranca register email-->
                 <label class="label">
                   <span class="label-text">Correo electrónico</span>
                 </label>
                 <input required type="email" placeholder="Escriba aquí su correo electrónico"
                   class="input input-bordered w-full max-w-xs bg-white" />
-              </div>
-              <!--arranca register password-->
-              <div class="form-control w-full max-w-xs mx-auto">
+                <!--termina register email-->
+                <!--arranca register password-->
                 <label class="label">
                   <span class="label-text">Contraseña</span>
                 </label>
                 <input required type="password" placeholder="Escriba aquí su contraseña"
                   class="input input-bordered w-full max-w-xs bg-white" />
+                <!--termina register password-->
+                <!--boton send register-->
+                <button type="submit" class="btn mt-4 btn-outline text-green-400 hover:text-white hover:border-green-400 border-green-400 hover:bg-green-400 mb-3">Registrarse</button>
+                <!--termina boton send register-->
               </div>
-              <!--termina register password-->
             </div>
             <div class="modal-action">
               <label for="my-modal-5"
                 class="btn btn-sm btn-circle absolute right-4 top-4 border-solid bg-transparent border-red-600 text-red-600 hover:bg-red-600 hover:text-white hover:border-none">X</label>
             </div>
-            <button type="submit"
-              class="btn justify-center sm:mx-20 md:mx-40 mt-2 btn-outline text-green-400 hover:text-white hover:border-green-400 border-green-400 hover:bg-green-400 mb-3">Registrarse</button>
           </div>
           <!--termina modal box-->
         </div>
