--- a/src/index.html
+++ b/src/index.html
@@ -32,7 +32,7 @@
                 class="hover:bg-cyan-900 active:bg-cyan-900 hover:text-white">Transferencias</a></li>
           </ul>
         </div>
-        <a class="btn btn-ghost normal-case text-xl hidden sm:flex ">Bornoz Bank</a>
+        <a rel="noopener noreferrer" class="btn btn-ghost normal-case text-xl hidden sm:flex "><img class="flex w-10" src="./assets/logo-blanco.png" alt="logo de Bornoz Bank"></a>
       </div>
       <div class="navbar-center hidden lg:flex justify-center align-middle">
         <ul class="menu menu-horizontal p-0 font-light text-black bg-white rounded-box shadow-lg">
@@ -50,35 +50,36 @@
         <!--arranca modal-->
         <div class="modal">
           <div class="modal-box w-11/12 sm:w-8/12 h-fit max-w-5xl bg-white text-black flex flex-col">
-            <h2 class="text-green-400 text-center text-3xl pt-3 font-semibold">Bornoz Bank</h2>
-            <h2 class="text-gray-400 text-center text-2xl pt-4">Registrese aquí debajo gratis</h2>
+            <img class="flex w-16 mx-auto pt-4" src="./assets/logo-negro.png" alt="logo de Bornoz Bank">
+            <h2 class="text-black text-center text-3xl font-semibold">Bornoz Bank</h2>
+            <h2 class="text-gray-400 text-center text-2xl pt-1">Registrese aquí debajo gratis</h2>
             <div class="form flex flex-col items-center">
               <!--arranca register-->
               <div class="form-control w-full max-w-xs mx-auto pt-4" id="registerForm">
                 <!--arranca register usuario-->
                 <label class="label">
-                  <span class="label-text">Nombre de usuario</span>
+                  <span class="label-text text-base">Nombre de usuario</span>
                 </label>
                 <input required type="text" placeholder="Escriba aquí su nombre de usuario"
                   class="input input-bordered w-full max-w-xs bg-white" minlength="4" maxlength="30" />
                 <!--termina register usuario-->
                 <!--arranca register email-->
                 <label class="label">
-                  <span class="label-text">Correo electrónico</span>
+                  <span class="label-text text-base">Correo electrónico</span>
                 </label>
                 <input required type="email" placeholder="Escriba aquí su correo electrónico"
                   class="input input-bordered w-full max-w-xs bg-white" maxlength="50" />
                 <!--termina register email-->
                 <!--arranca register password-->
                 <label class="label">
-                  <span class="label-text">Contraseña</span>
+                  <span class="label-text text-base">Contraseña</span>
                 </label>
                 <input required type="password" placeholder="Escriba aquí su contraseña"
                   class="input input-bordered w-full max-w-xs bg-white" minlength="4" maxlength="12" />
                 <!--termina register password-->
                 <!--boton send register-->
                 <button type="submit" id="submitRegister"
-                  class="btn mt-4 btn-outline text-green-400 hover:text-white hover:border-green-400 border-green-400 hover:bg-green-400 mb-3">Registrarse</button>
+                  class="btn mt-4 btn-outline text-black border-black hover:text-white hover:border-green-400 hover:bg-green-400 mb-3">Registrarse</button>
                 <!--termina boton send register-->
               </div>
             </div>
