--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
   <title>Bornoz Bank</title>
   <script src="https://kit.fontawesome.com/2a09230c59.js" crossorigin="anonymous"></script>
   <script defer src="../src/js/app.js"></script>
-  <link rel="shortcut icon" href="./src/assets/logo.png" type="image/x-icon">
+  <link rel="shortcut icon" href="../src/assets/logo.png" type="image/x-icon">
 </head>
 
 <body class="bg-gradient-to-b from-green-400 to-cyan-900 ">
@@ -24,7 +24,7 @@
           </label>
           <ul tabindex="0"
             class="menu menu-compact dropdown-content mt-3 p-2 shadow-lg text-black bg-white rounded-box w-52 ">
-            <li><a href="./src/dashboard.html" rel="noopener noreferrer"
+            <li><a href="../src/dashboard.html" rel="noopener noreferrer"
                 class="hover:bg-cyan-900 active:bg-cyan-900 hover:text-white">Home</a></li>
             <li><a rel="noopener noreferrer" class="hover:bg-cyan-900 active:bg-cyan-900 hover:text-white">Contactos</a>
             </li>
@@ -32,11 +32,11 @@
                 class="hover:bg-cyan-900 active:bg-cyan-900 hover:text-white">Transferencias</a></li>
           </ul>
         </div>
-        <a rel="noopener noreferrer" class="btn btn-ghost normal-case text-xl hidden sm:flex "><img class="flex w-10" src="./src/assets/logo-blanco.png" alt="logo de Bornoz Bank"></a>
+        <a rel="noopener noreferrer" class="btn btn-ghost normal-case text-xl hidden sm:flex "><img class="flex w-10" src="../src/assets/logo-blanco.png" alt="logo de Bornoz Bank"></a>
       </div>
       <div class="navbar-center hidden lg:flex justify-center align-middle">
         <ul class="menu menu-horizontal p-0 font-light text-black bg-white rounded-box shadow-lg">
-          <li><a href="./src/dashboard.html" rel="noopener noreferrer" class="active:bg-cyan-900">Home</a></li>
+          <li><a href="../src/dashboard.html" rel="noopener noreferrer" class="active:bg-cyan-900">Home</a></li>
           <li><a rel="noopener noreferrer" class="active:bg-cyan-900">Contactos</a></li>
           <li><a rel="noopener noreferrer" class="active:bg-cyan-900">Transferencias</a></li>
         </ul>
@@ -50,7 +50,7 @@
         <!--arranca modal-->
         <div class="modal">
           <div class="modal-box w-11/12 sm:w-8/12 h-fit max-w-5xl bg-white text-black flex flex-col">
-            <img class="flex w-16 mx-auto pt-4" src="./src/assets/logo-negro.png" alt="logo de Bornoz Bank">
+            <img class="flex w-16 mx-auto pt-4" src="../src/assets/logo-negro.png" alt="logo de Bornoz Bank">
             <h2 class="text-black text-center text-3xl font-semibold">Bornoz Bank</h2>
             <h2 class="text-gray-400 text-center text-2xl pt-1">Registrese aquí debajo gratis</h2>
             <div class="form flex flex-col items-center">
