--- a/src/index.html
+++ b/src/index.html
@@ -14,48 +14,30 @@
 <body class="bg-gradient-to-b from-green-400 to-cyan-900 ">
   <header>
     <div class="navbar text-white pt-7 px-10">
+      <!--arranca navbar start-->
       <div class="navbar-start">
-        <div class="dropdown">
-          <label tabindex="0" class="btn btn-ghost lg:hidden">
-            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
-              stroke="currentColor" stroke-width="2">
-              <path stroke-linecap="round" stroke-linejoin="round" d="M4 6h16M4 12h16M4 18h16" />
-            </svg>
-          </label>
-          <ul tabindex="0"
-            class="menu menu-compact dropdown-content mt-3 p-2 shadow-lg text-black bg-white rounded-box w-52 ">
-            <li><a href="../src/dashboard.html" rel="noopener noreferrer"
-                class="hover:bg-cyan-900 active:bg-cyan-900 hover:text-white">Home</a></li>
-            <li><a rel="noopener noreferrer" class="hover:bg-cyan-900 active:bg-cyan-900 hover:text-white">Contactos</a>
-            </li>
-            <li><a rel="noopener noreferrer"
-                class="hover:bg-cyan-900 active:bg-cyan-900 hover:text-white">Transferencias</a></li>
-          </ul>
-        </div>
-        <a rel="noopener noreferrer" class="btn btn-ghost normal-case text-xl hidden sm:flex "><img class="flex w-10" src="../src/assets/logo-blanco.png" alt="logo de Bornoz Bank"></a>
+        <a rel="noopener noreferrer" class="btn btn-ghost normal-case text-xl hidden sm:flex "><img class="flex w-10"
+            src="../src/assets/logo-blanco.png" alt="logo de Bornoz Bank"></a>
       </div>
-      <div class="navbar-center hidden lg:flex justify-center align-middle">
-        <ul class="menu menu-horizontal p-0 font-light text-black bg-white rounded-box shadow-lg">
-          <li><a href="../src/dashboard.html" rel="noopener noreferrer" class="active:bg-cyan-900">Home</a></li>
-          <li><a rel="noopener noreferrer" class="active:bg-cyan-900">Contactos</a></li>
-          <li><a rel="noopener noreferrer" class="active:bg-cyan-900">Transferencias</a></li>
-        </ul>
+      <!--termina navbar end-->
+      <!--arranca navbar center-->
+      <div class="navbar-center hidden justify-center align-middle">
       </div>
+      <!--termina navbar center-->
       <!--arranca navbar end-->
       <div class="navbar-end">
-        <label for="my-modal-5"
+        <!--arranca modal register-->
+        <label for="my-modal-4"
           class="btn modal-button font-medium text-cyan-900 hover:text-white bg-white hover:border-cyan-900 border-cyan-900 hover:bg-cyan-900 border-none ml-2 shadow-lg rounded-box">Registrarse</label>
-        <!--toggle modal-->
-        <input type="checkbox" id="my-modal-5" class="modal-toggle" />
-        <!--arranca modal-->
-        <div class="modal">
-          <div class="modal-box w-11/12 sm:w-8/12 h-fit max-w-5xl bg-white text-black flex flex-col">
+        <input type="checkbox" id="my-modal-4" class="modal-toggle" />
+        <label for="my-modal-4" class="modal cursor-pointer">
+          <label class="modal-box relative w-11/12 sm:w-8/12 h-fit max-w-5xl bg-white text-black flex flex-col" for="">
             <img class="flex w-16 mx-auto pt-4" src="../src/assets/logo-negro.png" alt="logo de Bornoz Bank">
             <h2 class="text-black text-center text-3xl font-semibold">Bornoz Bank</h2>
             <h2 class="text-gray-400 text-center text-2xl pt-1">Registrese aquí debajo gratis</h2>
             <div class="form flex flex-col items-center">
               <!--arranca register-->
-              <div class="form-control w-full max-w-xs mx-auto pt-4" id="registerForm">
+              <div class="form-control w-full max-w-xs mx-auto pt-4 pb-4" id="registerForm">
                 <!--arranca register usuario-->
                 <label class="label">
                   <span class="label-text text-base">Nombre de usuario</span>
@@ -81,27 +63,32 @@
                 <button type="submit" id="submitRegister"
                   class="btn mt-4 btn-outline text-black border-black hover:text-white hover:border-green-400 hover:bg-green-400 mb-3">Registrarse</button>
                 <!--termina boton send register-->
+                <!--arranca alerta de registro con exito-->
+                <div class="alert alert-success bg-green-400 text-white hidden" id="alertRegisterSuccess">
+                  <div>
+                    <svg xmlns="http://www.w3.org/2000/svg" class="stroke-current flex-shrink-0 h-6 w-6" fill="none"
+                      viewBox="0 0 24 24">
+                      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                        d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" /></svg>
+                    <span>El usuario ha sido creado correctamente! Inicie sesión.</span>
+                  </div>
+                </div>
+                <!--termina alerta de registro con exito-->
+                <!--arranca error en registro-->
+                <div class="alert alert-error text-white bg-red-700 hidden" id="alertRegisterError">
+                  <div>
+                    <svg xmlns="http://www.w3.org/2000/svg" class="stroke-current flex-shrink-0 h-6 w-6" fill="none" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 14l2-2m0 0l2-2m-2 2l-2-2m2 2l2 2m7-2a9 9 0 11-18 0 9 9 0 0118 0z" /></svg>
+                    <span>Error! Complete todos los campos por favor.</span>
+                  </div>
+                </div>
+                <!--termina error en registro-->
               </div>
+              <!--termina form interno-->
             </div>
-            <div class="modal-action">
-              <label for="my-modal-5"
-                class="btn btn-sm btn-circle absolute right-4 top-4 border-solid bg-transparent border-red-600 text-red-600 hover:bg-red-600 hover:text-white hover:border-none">X</label>
-            </div>
-            <!--arranca alerta de registro con exito-->
-            <div class="alert alert-success bg-green-400 text-white hidden" id="alertRegisterSuccess">
-              <div>
-                <svg xmlns="http://www.w3.org/2000/svg" class="stroke-current flex-shrink-0 h-6 w-6" fill="none"
-                  viewBox="0 0 24 24">
-                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                    d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" /></svg>
-                <span>El usuario ha sido creado correctamente! Puede iniciar sesión.</span>
-              </div>
-            </div>
-            <!--termina alerta de registro con exito-->
-          </div>
-          <!--termina modal box-->
-        </div>
-        <!--termina modal-->
+            <!--termina form-->
+          </label>
+        </label>
+        <!--termina modal register-->
       </div>
       <!--termina navbar end-->
     </div>
