--- a/src/index.html
+++ b/src/index.html
@@ -70,7 +70,7 @@
                       viewBox="0 0 24 24">
                       <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                         d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" /></svg>
-                    <span>El usuario ha sido creado correctamente! Inicie sesión.</span>
+                    <span>El usuario ha sido creado correctamente! Está siendo redirigido automaticamente.</span>
                   </div>
                 </div>
                 <!--termina alerta de registro con exito-->
