--- a/src/dashboard.html
+++ b/src/dashboard.html
@@ -8,6 +8,7 @@
   <title>Bornoz Bank</title>
   <script src="https://kit.fontawesome.com/2a09230c59.js" crossorigin="anonymous"></script>
   <script defer src="./js/dashboard.js"></script>
+  <link rel="shortcut icon" href="../src/assets/logo.png" type="image/x-icon">
 </head>
 
 <body class="bg-gradient-to-b from-green-400 to-cyan-900 ">
@@ -28,7 +29,8 @@
             <li><a class="hover:bg-cyan-900 active:bg-cyan-900">Transferencias</a></li>
           </ul>
         </div>
-        <a class="btn btn-ghost normal-case text-xl hidden sm:flex ">Bornoz Bank</a>
+        <a rel="noopener noreferrer" class="btn btn-ghost normal-case text-xl hidden sm:flex "><img class="flex w-10"
+          src="./assets/logo-blanco.png" alt="logo de Bornoz Bank"></a>
       </div>
       <div class="navbar-center hidden lg:flex justify-center align-middle">
         <ul class="menu menu-horizontal p-0 font-light text-black bg-white rounded-box shadow-lg">
